fix - responsive image on mobile view

--- a/src/components/Explore/index.sass
+++ b/src/components/Explore/index.sass
@@ -21,7 +21,7 @@
 
   &__image
     width: 200px
-    height: auto
+    max-height: 200px
 
   h6
     font-size: 16px
@@ -47,6 +47,7 @@
 
     &__image
       width: 600px
+      max-height: 582px
 
     &__top-content
       display: flex
@@ -75,7 +76,6 @@
 
     &__image
       width: 700px
-      height: auto
 
     &__description
       font-size: 20px
