--- a/src/components/Technologies/index.sass
+++ b/src/components/Technologies/index.sass
@@ -13,6 +13,7 @@
 
   &__title
     color: #ffffff !important
+    padding-bottom: 40px !important
 
   background-color: #000000
   img
@@ -53,7 +54,7 @@
     padding: 100px
 
     &__title
-      padding-bottom: 100px
+      padding-bottom: 100px !important
 
     img
       width: 99px
