--- a/src/pages/App/index.sass
+++ b/src/pages/App/index.sass
@@ -108,23 +108,28 @@ p, span
 .heading-xl
   font-size: 34px
   color: $solidBlack
+  padding-bottom: 20px
 
 .heading-lg
   font-size: 26px
   padding-bottom: 20px
   color: $darkGray
+  padding-bottom: 20px
 
 .heading-base
   font-size: 20px
   color: $darkGray
+  padding-bottom: 20px
 
 .heading-small
   font-size: 24px
   color: $softBlack
+  padding-bottom: 20px
 
 .heading-x-small
   font-size: 20px
   color: $softBlack
+  padding-bottom: 12px
 
 .text-xl
   font-size: 18px
@@ -156,11 +161,9 @@ p, span
 
   .heading-small
     font-size: 24px
-    padding-bottom: 20px
 
   .heading-x-small
     font-size: 20px
-    padding-bottom: 12px
 
   .text-xl
     font-size: 26px
